--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yii2-carousel/yii2-carousel",
+    "name": "oakcms/yii2-carousel",
     "description": "Yii2 Carousel bootstrap 3 for oakcms",
     "type": "yii2-extension",
     "keywords": ["yii2","extension"," carousel"," bootstrap carousel"],
